# LearnOpenGL

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/camera/: camera.cpp  camera.hpp
src/helpers/: root_dir.h.in
src/mesh/: mesh.cpp  mesh.hpp
src/model_loading/: mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/shaders/: basic.fs  basic.vs  lighting.fs  lighting.vs  shader.cpp  shader.hpp
